# blackboard-back

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.py  pyvenv.cfg
app/: main.cpp  serverTypes.h
app/Connection/include/: Connection.h
app/Connection/src/: Connection.cpp
components/: CMakeLists.txt
components/Logger/: CMakeLists.txt
components/Logger/include/: Logger.h  logger.h
components/NetworkMessage/: CMakeLists.txt
components/NetworkMessage/include/: NetworkMessage.h
components/NetworkMessage/src/: NetworkMessage.cpp
components/Socket/: CMakeLists.txt
components/Socket/include/: TCPConnection.h  server.h
components/Socket/src/: TCPConnection.cpp  server.cpp
components/TCPConnection/: CMakeLists.txt
components/TCPConnection/include/: TCPConnection.h
components/TCPConnection/src/: TCPConnection.cpp
components/TCPMessage/: CMakeLists.txt
components/TCPMessage/include/: TCPMessage.h
components/TCPMessage/src/: TCPMessage.cpp
scripts/env/: pyvenv.cfg
scripts/setup/: setup.sh
src/: main.cpp  server.h  serverTypes.h
tester/: tester.py  tester_rx.py  tester_tx.py
tools/scripts/env/: pyvenv.cfg
tools/scripts/setup/: setup.sh
tools/tester/: tester_rx.py  tester_tx.py
